# pulumi-vercel-dynamic

./: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
pulumi_vercel/: __init__.py  client.py  environment_variable.py
