[tool.poetry]
name = "pulumi-vercel-dynamic"
version = "0.1.0"
description = ""
authors = ["Louis Amon <louis@nuage.studio>"]
readme = "README.md"
packages = [{ include = "pulumi_vercel" }]

[tool.poetry.dependencies]
python = "^3.10"
pulumi = "^3.67.1"
requests = "^2.30.0"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
